fix some dark mode stuff

--- a/cpai/src/Component/About/index.css
+++ b/cpai/src/Component/About/index.css
@@ -11,7 +11,7 @@
 
 .dark .about-section {
     max-width: 60%;
-    margin: 175px auto 1px auto;
+    margin: 150px auto 1px auto;
     display: flex;
     justify-content: center;
     align-items: center;
